--- a/mybonds/.settings/org.eclipse.core.resources.prefs
+++ b/mybonds/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,7 @@ encoding//apps/geeknews/urls.py=utf-8
 encoding//apps/geeknews/views.py=utf-8
 encoding//apps/newsvc/__init__.py=utf-8
 encoding//apps/newsvc/views.py=utf-8
+encoding//build/load_channel.py=utf-8
 encoding/<project>=UTF-8
 encoding/__init__.py=utf-8
 encoding/settings.py=utf-8
