修改uwsgi配置文件

--- a/mybonds/uwsgi.ini
+++ b/mybonds/uwsgi.ini
@@ -3,13 +3,21 @@ chdir=/root/mybonds
 #module=mybonds.wsgi
 module=wsgi
 master=True
-processes=1
-pidfile=/tmp/project-master.pid
 vacuum=True
-max-requests=5000
-memory-report = true
-enable-threads = true
+memory-report=True
+enable-threads=True
 socket=0.0.0.0:49152
-harakiri=20
 #daemonize=/var/log/uwsgi/mybonds.log
 daemonize=/root/mybonds/mybonds.log
+pidfile=/tmp/project-master.pid
+
+socket-timeout=4
+listen=128
+processes=10
+max-requests=5000
+
+buffer-size=4096
+harakiri=30
+post-buffering=4096
+
+limit-as=1024
