--- a/mybonds/uwsgi.ini
+++ b/mybonds/uwsgi.ini
@@ -2,7 +2,7 @@
 chdir=/root/mybonds
 #module=mybonds.wsgi
 module=wsgi
-master=True
+master=True #启动主控进程
 vacuum=True
 memory-report=True
 enable-threads=True
@@ -13,7 +13,7 @@ pidfile=/tmp/project-master.pid
 
 socket-timeout=4
 listen=128
-processes=10
+processes=4
 max-requests=5000
 
 buffer-size=4096
