--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -14,7 +14,7 @@ file=/tmp/supervisor.sock   ; (the path to the socket file)
 ;password=123               ; (default is no password (open server))
 
 ;[inet_http_server]         ; inet (TCP) server disabled by default
-port=127.0.0.1:9001        ; (ip_address:port specifier, *:port for all iface)
+port=9001        ; (ip_address:port specifier, *:port for all iface)
 ;username=root              ; (default is no username (open server))
 ;password=root123               ; (default is no password (open server))
 
@@ -140,9 +140,13 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:daemon]
 command = python /root/mybonds/apps/geeknews/daemonProcess.py run
-autorstart=true
-stdout_logfile=/root/daemon.out
-stderr_logfile=/root/daemon.error
+;autorstart=true
+;stdout_logfile=/root/daemon.out
+;stderr_logfile=/root/daemon.error
+autostart=true                ; supervisord守护程序启动时自动启动
+autorestart=true              ; supervisord守护程序重启时自动重启
+redirect_stderr=true          ; 将stderr重定向到stdout
+stdout_logfile = /root/daemon.out
 
 [program:django]
 command = uwsgi --ini /root/mybonds/uwsgi.ini
