add aplly user name length from 10 to 20

--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -141,11 +141,11 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 [program:daemon]
 command = python /root/mybonds/apps/geeknews/daemonProcess.py run
 ;autorstart=true
-;stdout_logfile=/root/daemon.out
-;stderr_logfile=/root/daemon.error
+stdout_logfile=/root/daemon.out
+stderr_logfile=/root/daemon.error
 autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
-redirect_stderr=true          ; 将stderr重定向到stdout
+;redirect_stderr=true          ; 将stderr重定向到stdout
 stdout_logfile = /root/daemon.out
 
 [program:django]
