--- a/mybonds/.settings/org.eclipse.core.resources.prefs
+++ b/mybonds/.settings/org.eclipse.core.resources.prefs
@@ -6,9 +6,11 @@ encoding//apps/geeknews/daemonProcess.py=utf-8
 encoding//apps/geeknews/logexport.py=utf-8
 encoding//apps/geeknews/urls.py=utf-8
 encoding//apps/geeknews/views.py=utf-8
+encoding//apps/newspubfunc.py=utf-8
 encoding//apps/newsvc/__init__.py=utf-8
 encoding//apps/newsvc/urls.py=utf-8
 encoding//apps/newsvc/views.py=utf-8
+encoding//build/docmeta.py=utf-8
 encoding//build/load_channel.py=utf-8
 encoding//build/testemail.py=utf-8
 encoding/<project>=UTF-8
