modified docmeta.py and add it to supervisord

--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -145,8 +145,16 @@ stdout_logfile=/root/daemon.out
 stderr_logfile=/root/daemon.error
 autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
-;redirect_stderr=true          ; 将stderr重定向到stdout
-stdout_logfile = /root/daemon.out
+;redirect_stderr=true          ; 将stderr重定向到stdout 
+
+[program:docmeta]
+command = python /root/mybonds/build/docmeta.py -c all -a 3600 
+;autorstart=true
+stdout_logfile=/root/docmeta.out
+stderr_logfile=/root/docmeta.error
+autostart=true                ; supervisord守护程序启动时自动启动
+autorestart=true              ; supervisord守护程序重启时自动重启
+;redirect_stderr=true          ; 将stderr重定向到stdout 
 
 [program:django]
 command = uwsgi --ini /root/mybonds/uwsgi.ini
