--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -156,13 +156,13 @@ autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
 ;redirect_stderr=true          ; 将stderr重定向到stdout 
 
-[program:django]
-command = uwsgi --ini /root/mybonds/uwsgi.ini
-stopsignal=QUIT
-autostart=true
-autorestart=true
-stdout_logfile=/tmp/mybonds.log
-stderr_logfile=/tmp/mybonds.error
-exitcodes=0,1,2
+;[program:django]
+;command = uwsgi --ini /root/mybonds/uwsgi.ini
+;stopsignal=QUIT
+;autostart=true
+;autorestart=true
+;stdout_logfile=/tmp/mybonds.log
+;stderr_logfile=/tmp/mybonds.error
+;exitcodes=0,1,2
 
 
