--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -139,7 +139,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;files = relative/directory/*.ini
 
 [program:daemon]
-command = python /root/mybonds/apps/geeknews/daemonProcess.py run
+command = python /root/mybonds/apps/geeknews/daemonProcess.py run all
 ;autorstart=true
 stdout_logfile=/root/daemon.out
 stderr_logfile=/root/daemon.error
