dispatch beacon,sendemail and removedoc from daemon

--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -138,9 +138,24 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;[include]
 ;files = relative/directory/*.ini
 
-[program:daemon]
-command = python /root/mybonds/apps/geeknews/daemonProcess.py run all
-;autorstart=true
+[program:beacon]
+command = python /root/mybonds/apps/geeknews/daemonProcess.py run beacon
+stdout_logfile=/root/daemon.out
+stderr_logfile=/root/daemon.error
+autostart=true                ; supervisord守护程序启动时自动启动
+autorestart=true              ; supervisord守护程序重启时自动重启
+;redirect_stderr=true          ; 将stderr重定向到stdout 
+
+[program:sendemail]
+command = python /root/mybonds/apps/geeknews/daemonProcess.py run sendemail
+stdout_logfile=/root/daemon.out
+stderr_logfile=/root/daemon.error
+autostart=true                ; supervisord守护程序启动时自动启动
+autorestart=true              ; supervisord守护程序重启时自动重启
+;redirect_stderr=true          ; 将stderr重定向到stdout 
+
+[program:removedoc]
+command = python /root/mybonds/apps/geeknews/daemonProcess.py run removedoc
 stdout_logfile=/root/daemon.out
 stderr_logfile=/root/daemon.error
 autostart=true                ; supervisord守护程序启动时自动启动
