add fulltext proc module into supervisord.conf

--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -146,6 +146,14 @@ autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
 ;redirect_stderr=true          ; 将stderr重定向到stdout 
 
+[program:fulltext]
+command = python /root/mybonds/apps/geeknews/daemonProcess.py run fulltext
+stdout_logfile=/root/daemonfulltext.out
+stderr_logfile=/root/daemonfulltext.error
+autostart=true                ; supervisord守护程序启动时自动启动
+autorestart=true              ; supervisord守护程序重启时自动重启
+;redirect_stderr=true          ; 将stderr重定向到stdout 
+
 [program:sendemail]
 command = python /root/mybonds/apps/geeknews/daemonProcess.py run sendemail
 stdout_logfile=/root/daemonsendemail.out
