--- a/mybonds/.settings/org.eclipse.core.resources.prefs
+++ b/mybonds/.settings/org.eclipse.core.resources.prefs
@@ -11,9 +11,11 @@ encoding//apps/newsvc/urls.py=utf-8
 encoding//apps/newsvc/views.py=utf-8
 encoding//build/__init__.py=utf-8
 encoding//build/docmeta.py=utf-8
+encoding//build/gen_stock.py=utf-8
 encoding//build/load_channel.py=utf-8
 encoding//build/logexport.py=utf-8
 encoding//build/monte-carlo.py=utf-8
+encoding//build/rtchannelserv.py=utf-8
 encoding//build/testemail.py=utf-8
 encoding/<project>=UTF-8
 encoding/__init__.py=utf-8
