modified sendemail msg["from"], add 2 api in stockcountsbackend.py

--- a/mybonds/.settings/org.eclipse.core.resources.prefs
+++ b/mybonds/.settings/org.eclipse.core.resources.prefs
@@ -15,7 +15,10 @@ encoding//build/gen_stock.py=utf-8
 encoding//build/load_channel.py=utf-8
 encoding//build/logexport.py=utf-8
 encoding//build/monte-carlo.py=utf-8
+encoding//build/rtchannelclient.py=utf-8
 encoding//build/rtchannelserv.py=utf-8
+encoding//build/stockcountsbackend.py=utf-8
+encoding//build/stockcountsclient.py=utf-8
 encoding//build/testemail.py=utf-8
 encoding/<project>=UTF-8
 encoding/__init__.py=utf-8
