new backend, new rules.

--- a/mybonds/.settings/org.eclipse.core.resources.prefs
+++ b/mybonds/.settings/org.eclipse.core.resources.prefs
@@ -10,6 +10,7 @@ encoding//apps/newsvc/__init__.py=utf-8
 encoding//apps/newsvc/urls.py=utf-8
 encoding//apps/newsvc/views.py=utf-8
 encoding//build/CfgGrp.py=utf-8
+encoding//build/RedisExport.py=utf-8
 encoding//build/__init__.py=utf-8
 encoding//build/docmeta.py=utf-8
 encoding//build/gen_stock.py=utf-8
@@ -21,7 +22,7 @@ encoding//build/rtchannelclient.py=utf-8
 encoding//build/rtchannelserv.py=utf-8
 encoding//build/stockcountsbackend.py=utf-8
 encoding//build/stockcountsclient.py=utf-8
-encoding//build/testemail.py=utf-8
+encoding//build/test.py=utf-8
 encoding/<project>=UTF-8
 encoding/__init__.py=utf-8
 encoding/settings.py=utf-8
