change popularid to channelpick

--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -174,10 +174,10 @@ autorestart=true              ; supervisord守护程序重启时自动重启
 command = python /root/mybonds/build/docmeta.py -c all -a 3600 -n 1
 ;autorstart=true
 stdout_logfile=/root/docmeta.out
-stderr_logfile=/root/docmeta.error
+;stderr_logfile=/root/docmeta.error
 autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
-;redirect_stderr=true          ; 将stderr重定向到stdout 
+redirect_stderr=true          ; 将stderr重定向到stdout 
 
 [program:channel]
 command = python /root/mybonds/build/rtchannelserv.py
