modified docmeta add queue process module.

--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -139,36 +139,28 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;files = relative/directory/*.ini
 
 [program:beacon]
-command = python /root/mybonds/apps/geeknews/daemonProcess.py run beacon
-stdout_logfile=/root/daemonbeacon.out
-stderr_logfile=/root/daemonbeacon.error
+command = python /root/mybonds/build/docmeta.py -c all -a 10 -n -1 -t beacon
+stdout_logfile=/root/beacon.out
+stderr_logfile=/root/beacon.error
 autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
-;redirect_stderr=true          ; 将stderr重定向到stdout 
+redirect_stderr=true          ; 将stderr重定向到stdout 
 
 [program:fulltext]
-command = python /root/mybonds/apps/geeknews/daemonProcess.py run fulltext
-stdout_logfile=/root/daemonfulltext.out
-stderr_logfile=/root/daemonfulltext.error
+command = python /root/mybonds/build/docmeta.py -c all -a 10 -n -1 -t fulltext 
+stdout_logfile=/root/fulltext.out
+stderr_logfile=/root/fulltext.error
 autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
-;redirect_stderr=true          ; 将stderr重定向到stdout 
+redirect_stderr=true          ; 将stderr重定向到stdout 
 
 [program:sendemail]
-command = python /root/mybonds/apps/geeknews/daemonProcess.py run sendemail
-stdout_logfile=/root/daemonsendemail.out
-stderr_logfile=/root/daemonsendemail.error
+command = python /root/mybonds/build/docmeta.py -c all -a 10 -n -1 -t sendemail  removedoc
+stdout_logfile=/root/sendemail.out
+stderr_logfile=/root/sendemail.error
 autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
-;redirect_stderr=true          ; 将stderr重定向到stdout 
-
-[program:removedoc]
-command = python /root/mybonds/apps/geeknews/daemonProcess.py run removedoc
-stdout_logfile=/root/daemonremovedoc.out
-stderr_logfile=/root/daemonremovedoc.error
-autostart=true                ; supervisord守护程序启动时自动启动
-autorestart=true              ; supervisord守护程序重启时自动重启
-;redirect_stderr=true          ; 将stderr重定向到stdout 
+redirect_stderr=true          ; 将stderr重定向到stdout 
 
 [program:docmeta]
 command = python /root/mybonds/build/docmeta.py -c all -a 3600 -n 1
