--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -154,10 +154,10 @@ autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
 redirect_stderr=true          ; 将stderr重定向到stdout 
 
-[program:sendemail]
+[program:other]
 command = python /root/mybonds/build/docmeta.py -c all -a 10 -n -1 -t sendemail  removedoc
-stdout_logfile=/root/sendemail.out
-stderr_logfile=/root/sendemail.error
+stdout_logfile=/root/other.out
+stderr_logfile=/root/other.error
 autostart=true                ; supervisord守护程序启动时自动启动
 autorestart=true              ; supervisord守护程序重启时自动重启
 redirect_stderr=true          ; 将stderr重定向到stdout 
