modified hotboard api

--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -155,7 +155,7 @@ autorestart=true              ; supervisord守护程序重启时自动重启
 redirect_stderr=true          ; 将stderr重定向到stdout 
 
 [program:other]
-command = python /root/mybonds/build/docmeta.py -c all -a 5 -n 20 -t sendemail channelpick popularychannel relatedchannel channelnews removedoc docextend
+command = python /root/mybonds/build/docmeta.py -c all -a 5 -n 20 -t hotboard sendemail channelpick popularychannel relatedchannel channelnews removedoc docextend
 stdout_logfile=/root/other.out
 stderr_logfile=/root/other.error
 autostart=true                ; supervisord守护程序启动时自动启动
