add WebSocket test

--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -189,4 +189,12 @@ autorestart=true              ; supervisord守护程序重启时自动重启
 ;stderr_logfile=/tmp/mybonds.error
 ;exitcodes=0,1,2
 
+[program:websocket]
+command = python /root/wangxi/WebSocketServ.py
+;autorstart=true
+stdout_logfile=/root/wangxi/websocket.out
+stderr_logfile=/root/wangxi/websocket.error
+autostart=false                ; supervisord守护程序启动时自动启动
+autorestart=false              ; supervisord守护程序重启时自动重启
+redirect_stderr=true          ; 将stderr重定向到stdout 
 
