--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -189,6 +189,15 @@ autorestart=true              ; supervisord守护程序重启时自动重启
 ;stderr_logfile=/tmp/mybonds.error
 ;exitcodes=0,1,2
 
+[program:tonado]
+command = python /root/mybonds/tornado_wsgi.py
+;autorstart=true
+stdout_logfile=/root/tornado.out
+stderr_logfile=/root/tornado.error
+autostart=false                ; supervisord守护程序启动时自动启动
+autorestart=false              ; supervisord守护程序重启时自动重启
+redirect_stderr=true          ; 将stderr重定向到stdout 
+
 [program:websocket]
 command = python /root/wangxi/WebSocketServ.py
 ;autorstart=true
