--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -189,7 +189,7 @@ autorestart=true              ; supervisord守护程序重启时自动重启
 ;stderr_logfile=/tmp/mybonds.error
 ;exitcodes=0,1,2
 
-[program:tonado]
+[program:tornado]
 command = python /root/mybonds/tornado_wsgi.py
 ;autorstart=true
 stdout_logfile=/root/tornado.out
