--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -190,9 +190,7 @@ autorestart=true              ; supervisord守护程序重启时自动重启
 ;exitcodes=0,1,2
 
 [program:tornado]
-command=/root/mybonds/ 
-process_name=tornado_wsgi.py
-;command = python /root/mybonds/tornado_wsgi.py
+command= python /root/mybonds/tornado_wsgi.py 
 ;autorstart=true
 stdout_logfile=/root/tornado.out
 stderr_logfile=/root/tornado.error
