--- a/mybonds/supervisord.conf
+++ b/mybonds/supervisord.conf
@@ -176,8 +176,8 @@ command = python /root/mybonds/build/rtchannelserv.py
 ;autorstart=true
 stdout_logfile=/root/channelserv.out
 stderr_logfile=/root/channelserv.error
-autostart=true                ; supervisord守护程序启动时自动启动
-autorestart=true              ; supervisord守护程序重启时自动重启
+autostart=false                ; supervisord守护程序启动时自动启动
+autorestart=false              ; supervisord守护程序重启时自动重启
 ;redirect_stderr=true          ; 将stderr重定向到stdout 
 
 ;[program:django]
